<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:cardCornerRadius="10dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:text="@string/register_alert_msg"
                android:textSize="16sp"
                android:id="@+id/alert_msg"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>

<!--                <ImageView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:maxHeight="100dp"-->
<!--                    android:src="@drawable/no_image_found"-->
<!--                    android:maxWidth="100dp"-->
<!--                    android:id="@+id/personal_photo_im"-->
<!--                    android:visibility="gone"-->
<!--                    />-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/upload_info"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:paddingLeft="20dp"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="300dp"
                android:text="@string/personal_photo"
                android:id="@+id/personal_photo_bt"
                android:background="@drawable/red_button_bg"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="300dp"
                android:text="@string/address_proof"
                android:id="@+id/address_proof_bt"
                android:background="@drawable/red_button_bg"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"

                />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</RelativeLayout>