<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/covid_help_desk"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:id="@+id/alert_msg"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cancel_layout"
            android:gravity="center"
            android:layout_weight="1"
            >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="125dp"
                android:text="@string/cancel"
                android:id="@+id/cancel_bt"
                android:background="@drawable/red_button_bg"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textAllCaps="false"
                android:layout_gravity="center"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="125dp"
            android:text="@string/okay"
            android:id="@+id/okay_bt"
            android:background="@drawable/red_button_bg"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>